--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>The Tea Cozy</title>
+    <link rel="stylesheet" href="style.css" tyep="text/css" />
+  </head>
+  <body>
+    
+  </body>
 </html>
