correct style.css file name add banner and banner style

--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <link rel="stylesheet" href="style.css" tyep="text/css" />
   </head>
   <body>
-    
+    <header class="banner">
+      <div class="image-container">
+        <img src=https://content.codecademy.com/courses/freelance-1/unit-4/img-tea-cozy-logo.png?_gl=1*6uv23y*_ga*ODkzMjk0NjU4OS4xNjU3MDE3MTMz*_ga_3LRZM6TM9L*MTY2MTM5MzEzNi4zOC4xLjE2NjEzOTU4NTAuNTIuMC4w alt="logo">
+      </div>
+      <nav>
+        <ul>
+          <li>Mission</li>
+          <li>Featured Tea</li>
+          <li>Location</li>
+        </ul>
+      </nav>
+    </header>
   </body>
 </html>
