--- a/index.html
+++ b/index.html
@@ -17,5 +17,64 @@
         </ul>
       </nav>
     </header>
+    <div  class="main">
+      <div class="content">
+        <h2>Mission</h2>
+        <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+      </div>
+    </div>
+    <div class="tea-of-the-month">
+      <div class="title">
+        <h2>Tea of the Month</h2>
+        <h4>What's Steeping at The Tea Cozy?<h4>
+      </div>
+      <div class="image-container">
+        <div class="image-piece">
+          <img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-berryblitz.jpg?_gl=1*b6901w*_ga*ODkzMjk0NjU4OS4xNjU3MDE3MTMz*_ga_3LRZM6TM9L*MTY2MTQ4MDM5My40MS4xLjE2NjE0ODA0NzYuNjAuMC4w">
+          <h4 class="caption">Fall Berry Blitz Tea</h4>
+        </div>
+        <div class="image-piece">
+          <img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-spiced-rum.jpg?_gl=1*b6901w*_ga*ODkzMjk0NjU4OS4xNjU3MDE3MTMz*_ga_3LRZM6TM9L*MTY2MTQ4MDM5My40MS4xLjE2NjE0ODA0NzYuNjAuMC4w">
+          <h4 class="caption">Spiced Rum Tea</h4>
+        </div>
+        <div class="image-piece">
+          <img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-donut.jpg?_gl=1*l841ge*_ga*ODkzMjk0NjU4OS4xNjU3MDE3MTMz*_ga_3LRZM6TM9L*MTY2MTQ4MDM5My40MS4xLjE2NjE0ODA0NzYuNjAuMC4w">
+          <h4 class="caption">Seasonal Donuts</h4>
+        </div>
+        <div class="image-piece">
+          <img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-myrtle-ave.jpg?_gl=1*l841ge*_ga*ODkzMjk0NjU4OS4xNjU3MDE3MTMz*_ga_3LRZM6TM9L*MTY2MTQ4MDM5My40MS4xLjE2NjE0ODA0NzYuNjAuMC4w">
+          <h4 class="caption">Myrtle Ave Tea</h4>
+        </div>
+        <div class="image-piece">
+          <img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-bedford-bizarre.jpg?_gl=1*gt9l57*_ga*ODkzMjk0NjU4OS4xNjU3MDE3MTMz*_ga_3LRZM6TM9L*MTY2MTQ4MDM5My40MS4xLjE2NjE0ODA0NzYuNjAuMC4w">
+          <h4 class="caption">Bedford Bizarre Tea</h4>
+        </div>
+      </div>
+    </div>  
+    <div class="location">
+      <div class="content">
+        <h2 class="title">Locations</h2>
+        <div class="location-boxes">
+          <div class="location-box">
+            <h4>Downtown</h4>
+            <h4>384 West 4th St</h4>
+            <h4>Suite 108</h4>
+            <h4>Portland Maine</h4>
+          </div>
+          <div class="location-box">
+            <h4>Downtown</h4>
+            <h4>384 West 4th St</h4>
+            <h4>Suite 108</h4>
+            <h4>Portland Maine</h4>
+          </div>
+          <div class="location-box">
+            <h4>Downtown</h4>
+            <h4>384 West 4th St</h4>
+            <h4>Suite 108</h4>
+            <h4>Portland Maine</h4>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
