Complete "contact" and "footer"

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <h4 class="caption">Bedford Bizarre Tea</h4>
         </div>
       </div>
-    </div>  
+    </div>
     <div class="location">
       <div class="content">
         <h2 class="title">Locations</h2>
@@ -75,6 +75,14 @@
           </div>
         </div>
       </div>
+    </div>
+    <div class="contact">
+      <h2>The Tea Cozy</h2>
+      <h5>contact@theteacozy.com</h5>
+      <h5>917-555-8905</5>
+    </div>
+    <div class="footer">
+      <h5>Copyright The Tea Cozy 2017<h4>
     </div>
   </body>
 </html>
