fill in more location info

--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
             <h4>Portland Maine</h4>
           </div>
           <div class="location-box">
-            <h4>Downtown</h4>
-            <h4>384 West 4th St</h4>
-            <h4>Suite 108</h4>
+            <h4>East Bayside</h4>
+            <h4>3433 Phisherman's Avenue</h4>
+            <h4>(Northwest Corner)</h4>
             <h4>Portland Maine</h4>
           </div>
           <div class="location-box">
-            <h4>Downtown</h4>
-            <h4>384 West 4th St</h4>
-            <h4>Suite 108</h4>
+            <h4>Oakdale</h4>
+            <h4>515 Crescent Avenue</h4>
+            <h4>Second Floor</h4>
             <h4>Portland Maine</h4>
           </div>
         </div>
